2015-03-05 Fixed issue with commands play/stop/next/previous in Slideshow module
2015-03-05 Fixed issue with using play command on iOS 7 and iOS 8 in Video module
2015-03-04 Fixed issue with double lines in Android 4.1.1, 4.1.2, 4.2.2, 4.3, 4.4.2 in Connection module
2015-03-02 Fixed issues with parsing HTML in Text Audio module
2015-02-27 Fixed issue with serving of mixed content by HTTPS and HTTP in YouTube module
2015-02-27 Fixed issue with keeping state disable/enable in filledGap in Text module
2015-02-27 Fixed issue with double lines in Android 4.1.1, 4.1.2, 4.2.2, 4.3 and 4.4.2 in Drawing module
2015-02-26 Added changes to Fraction module
2015-02-26 Added new commands moveTo, next, previous, play, pause, stop in Slideshow module
2015-02-26 Fixed issue with opacity in Drawing module
2015-02-25 Fixed issue with layout when LearnPen Drawing module is on page
2015-02-25 Added new command setEraserOff to Shape Tracing and Drawing modules
2015-02-25 Fixed issue with Step property in Line Number module.
2015-02-25 Added Show Answers to Sudoku module
2015-02-23 Fixed issue with disableGap command in Text module
2015-02-23 Added new command setOpacity to Shape Tracing and Drawing modules
2015-02-23 Added French special characters to eKeyboard module
2015-02-23 Fixed CSS styles in Hierarchical Lesson Report module
2015-02-23 Added new property "Y axis values" in Graph module
2015-02-23 Fixed displaying double image on Android in Viewer 3D module
2015-02-20 Changed loading gif size in Text Audio module
2015-02-20 Fixed issue with Show Answers in Dropdown gap in Text module
2015-02-19 Fixed problem with Show Answers in Image Gap module
2015-02-19 Fixed problem with Show Answers in Text module
2015-02-19 Fixed rendering LaTeX in Video module
2015-02-18 Fixed issue with working module on header in Animated Progress module
2015-02-18 Added property Is Click Disabled in Text Audio module
2015-02-18 Fixed rendering LaTeX in Double State Button module