@@ -4,11 +4,12 @@ import com.lorepo.icplayer.client.model.Page;
 
 public interface IContent {
 
-	public int	getPageCount();
-	public IPage	getPage(int index);
-	public IAddonDescriptor getAddonDescriptor(String addonId);
-	public Page findPageByName(String pageName);
-	public String getBaseUrl();
-	public IChapter getTableOfContents();
-	public IChapter getCommonPages();
+    public int getPageCount();
+    public IPage getPage(int index);
+    public IPage getPageById(String id);
+    public IAddonDescriptor getAddonDescriptor(String addonId);
+    public Page findPageByName(String pageName);
+    public String getBaseUrl();
+    public IChapter getTableOfContents();
+    public IChapter getCommonPages();
 }
